day:redis 缓存获取信息和回填数据